# soybean-admin-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  README_ENV_CONFIG.md  compose.yaml
migration/src/datas/: m20241024_033005_insert_sys_user.rs
server/config/: Cargo.toml
server/config/src/: config_init.rs  env_config.rs  lib.rs  multi_instance_env.rs
server/config/src/model/: config.rs  database_config.rs  jwt_config.rs  mongo_config.rs  redis_config.rs  s3_config.rs  server_config.rs
server/initialize/src/: config_initialization.rs  lib.rs
server/model/src/admin/entities/: sea_orm_active_enums.rs
server/resources/: application-test.yaml  application.yaml
server/service/src/admin/: sys_auth_service.rs  sys_menu_service.rs
